# pdf-classifier-v5

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
.github/: agent-conceptual-log.md  copilot-instructions.md
data/: initializer.cpp  test.h
docs/: context.md
docs/classifier/: anchored.md  constraints.md  constructors.md  log_reg.md  main.md  panics.md
examples/: CMakeLists.txt  main.py  test.cpp  test.h  test.hpp
src/: always_some.rs  classifier.cpp  context.rs  ffi.rs  inferencer.rs  initializer.rs  macros.rs  main.cpp  main.rs  obj_list.rs  object.cpp  page.rs  result_map.rs  score.rs  state.cpp  threading.rs
src/classifier/: context.rs  defer.rs  error.rs  mod.rs  result_map.rs  score.rs  unknown.rs  weights.rs
src/classifier/constraints/: mod.rs
src/classifier/constraints/hard/: invalid_pair.rs  mod.rs  natural_child.rs
src/classifier/constraints/soft/: mod.rs  (+3 more)
src/classifier/weights/: mod.rs  structural.rs
src/headers/: classifier.h  macros.h  object.h  rule.h  state.h  weights.h
src/math/: mod.rs  softcap.rs
src/tests/: bridge.rs  init.rs  mod.rs  thread_pool.rs  threading.rs  util.rs
src/threading/: mod.rs  pool.rs
src/weighting/: mod.rs  tests.rs
src/weighting/constraints/: mod.rs
src_cpp/: ffi.cpp  initializer.cpp  initializer.h  initializer.hpp
src_py/: .gitignore  build.py  globals.py  main.py  object.py  todo.md
src_py/cmake/: install_mupdf.cmake
src_py/templates/: generic.cmake
src_py/templates/headers/: context.h
src_py/tests/: test_build_user_file.py  test_expect_funcs.py  test_generate_shared_headers.py
(+14 files in other folders)
