[package]
name = "pdf_classifier"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0.192"
eq-float = "0.1.0"
futures = "0.3.31"
log = "0.4.29"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
trace = "0.1.7"

[build-dependencies]
cxx-build = "1.0.192"
cmake = "0.1.57"
